Home page work.  Testing jekyll.

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,18 @@
-<p>wow</p>
+<head>
+  <title>Triangle Fraternity - Toledo Chapter</title>
+  <link rel="stylesheet" href="home.css">
+</head>
+
+<body>
+  <div class="main">
+    {% include test.html %}
+    <!-- Image caroussel -->
+    <div>
+      <figure>
+        <img alt="some guys" src="./assets/banner1.jpg" />
+      </figure>
+    </div>
+  </div>
+</body>
+
+<script async src="./header/
